--- a/master.lyx
+++ b/master.lyx
@@ -83,7 +83,7 @@ Einleitung
 \end_layout
 
 \begin_layout Standard
-Übersicht:
+Übersicht
 \end_layout
 
 \begin_layout Enumerate
@@ -189,7 +189,7 @@ nicht uniformes AC0 = FO+
 \end_layout
 
 \begin_layout Section
-Kernaussagen
+Ergebnisse
 \end_layout
 
 \begin_layout Subsection
