--- a/master.tex
+++ b/master.tex
@@ -102,7 +102,7 @@ Schweikardt, Segoufin{]}.)
 \pagebreak{}
 
 
-\section{Kernaussagen}
+\section{Ergebnisse}
 
 
 \subsection{Fixpunktlogiken und Schaltkreise}
