--- a/master.tex
+++ b/master.tex
@@ -107,8 +107,8 @@ Schweikardt, Segoufin{]}.)
 
 \subsection{Fixpunktlogiken und Schaltkreise}
 
-Es werden die folgenden Äquivalenzen zwischen Fixpunktlogiken und
-Schaltkreisklassen nachgewiesen:
+Es werden die folgenden Äquivalenzen (nach \cite{Anderson2014,anderson_et_al:LIPIcs:2014:4445})
+zwischen Fixpunktlogiken und Schaltkreisklassen nachgewiesen:
 \begin{thm}
 \textbf{$\mathrm{FP}+\mathbf{ORD}$, $P$-uniforme $\mathrm{SBC}$}
 
@@ -179,8 +179,8 @@ zu $\varphi$ ist, und umgekehrt.
 
 \subsection{FO-Logiken und Schaltkreise}
 \begin{thm}
-\label{thm:5.5:fo-ord}$\mathrm{FO}+\mathbf{ORD}$, $P$-uniformes
-symmetrisches $\mathrm{AC}^{0}$.
+\cite{IMMERMAN198686}\label{thm:5.5:fo-ord}$\mathrm{FO}+\mathbf{ORD}$,
+$P$-uniformes symmetrisches $\mathrm{AC}^{0}$.
 
 Die folgenden Aussagen sind äquivalent:
 \begin{enumerate}
@@ -2970,6 +2970,7 @@ ausgedrückt werden:
 
 
 \bibliographystyle{plain}
-\bibliography{library}
+\nocite{*}
+\bibliography{master}
 
 \end{document}
